feat: adding more backend documentation
